Sun Dec  3 22:00:12 EET 2006  Pekka Riikonen <priikone@silcnet.org>

	* Added silc_socket_stream_is_udp.  Affected file is
	  lib/silcutil/silcsocketstream.[ch].

	* Added UDP transport support to packet engine.  Affected file
	  is lib/silccore/silcpacket.c.

	* Added silc_socket_stream_is_udp.  Affected file is
	  lib/silcutil/silcsocketstream.[ch].

Sat Nov 18 11:33:03 EET 2006  Pekka Riikonen <priikone@silcnet.org>

	* Added silc_packet_send_va[_ext] to send variable argument
	  formatted buffers.  Affected files lib/silcore/silcpacket.[ch].

	* Timeout freelist garbage collection added to scheduler.
	  Affected file lib/silcutil/silcschedule.c.

Thu Nov  9 18:12:15 EET 2006  Pekka Riikonen <priikone@silcnet.org>

	* Added silc_show_public_key_file to 
	  lib/silcapputil/silcapputil.[ch].

	* Added SILC_STR_ADVANCE support for buffer unformatting.
	  Affected file lib/silcutil/silcbuffmt.c.

Tue Nov  7 18:04:36 EET 2006  Pekka Riikonen <priikone@silcnet.org

	* Added silc_string_split to lib/silcutil/silcstrutil.[ch].

	* Added silc_mutex_assert_locked to lib/silcutil/silcmutex.h.

	* silc_fsm_continue[_sync] now cancels erlier timeout set with
	  silc_fsm_next_later.  Affected file lib/silcutil/silcfsm.c.

Sat Nov  4 21:50:37 EET 2006  Pekka Riikonen <priikone@silcnet.org

	* Added SILC_STR_FUNC to buffer format API.  Affected files
	  are lib/silcutil/silcbuffmt.[ch].

	* Added silc_buffer_[s]enlarge to lib/silcutil/silcbuffer.h.

	* No more memory allocation for message payload parsing.
	  Pre-allocated buffer can be used with message payload encoding.
	  Affected files lib/silccore/silcmessage.[ch].

Fri Oct 27 21:01:26 EEST 2006  Pekka Riikonen <priikone@silcnet.org

	* Added silc_buffer_sunformat and silc_buffer_sunformat_vp
	  to silcutil/silcbuffmt.[ch].

Sun Oct 22 13:03:07 EEST 2006  Pekka Riikonen <priikone@silcnet.org

	* Added SILC_STR_BUFFER to format and unformat SilcBuffer.
	  Affected file lib/silcutil/silcbuffmt.[ch].
